--- a/app/design/frontend/default/default/template/moip/form.phtml
+++ b/app/design/frontend/default/default/template/moip/form.phtml
@@ -210,7 +210,7 @@ echo "Pagável em qualquer agência bancária ou casas lotéricas.";
             <?php endif; ?>
  
 </ul>
-<a href="https://www.moip.com.br" target="_blank"><img src="<?php echo $this->getSkinUrl('o2ti_moip/imagem/logomoipck.png');?>" style="margin-top:15px;" border="0"></a>
-<div id="moip_o2preencha" style="display:none;float:left;width:300px;margin-bottom:25px;">Por favor, primeiro preencha o endereço de cobrança!</div>
 <div id="checkout-payment-o2ti"></div>
+<div id="moip_o2preencha" style="display:none;float:left;width:300px;margin-bottom:25px;"><ul class="messages"><li class="error-msg"><ul><li>Por favor, primeiro preencha o endereço de cobrança!</li></ul></li></ul></div>
+<a href="https://www.moip.com.br" target="_blank"><img src="<?php echo $this->getSkinUrl('o2ti_moip/imagem/logomoipck.png');?>" style="margin-top:15px;" border="0"></a>
 </br></br>
