--- a/app/design/frontend/default/default/template/moip/form.phtml
+++ b/app/design/frontend/default/default/template/moip/form.phtml
@@ -212,5 +212,5 @@ echo "Pagável em qualquer agência bancária ou casas lotéricas.";
 </ul>
 <div id="checkout-payment-o2ti"></div>
 <div id="moip_o2preencha" style="display:none;float:left;width:300px;margin-bottom:25px;"><ul class="messages"><li class="error-msg"><ul><li>Por favor, primeiro preencha o endereço de cobrança!</li></ul></li></ul></div>
-<a href="https://www.moip.com.br" target="_blank"><img src="<?php echo $this->getSkinUrl('o2ti_moip/imagem/logomoipck.png');?>" style="margin-top:15px;" border="0"></a>
+<a href="https://site.moip.com.br/compra-protegida/" target="_blank"><img src="<?php echo $this->getSkinUrl('o2ti_moip/imagem/logomoipck.png');?>" style="margin-top:15px;" border="0"></a>
 </br></br>
