--- a/app/design/frontend/default/default/template/moip/form.phtml
+++ b/app/design/frontend/default/default/template/moip/form.phtml
@@ -104,7 +104,7 @@ echo "Pagável em qualquer agência bancária ou casas lotéricas.";
     <input type="text" name="payment[credito_numero]" id="credito_numero" class="required-entry"  autocomplete="off" />
     </li>    
     <li style="list-style:none; float:left;padding-top:10px">
-    <label style="float:left; width:100px;font-size:12px;padding-top:5px;">Expiração:</label>
+    <label style="float:left; width:100px;font-size:12px;padding-top:5px;">Validade:</label>
     <select name="payment[credito_expiracao_mes]" id="credito_expiracao_mes" class="required-entry"  autocomplete="off">
       <option value="">Mês</option>
       <option value="01">01</option>
