--- a/app/design/frontend/default/default/template/moip/form.phtml
+++ b/app/design/frontend/default/default/template/moip/form.phtml
@@ -61,7 +61,7 @@ $dn = date("d/m/Y", strtotime($dn));
                         </ul>
 
 <div id="checkout-payment-o2ti-deb">
-<div class="validation-advice" id="advice-required-entry_payment_o2ti" style="">Selecione o banco</div>
+<div class="validation-advice" id="advice-required-entry_payment_o2ti" style=""><ul class="messages"><li class="error-msg"><ul><li>Por favor, selecione o banco!</li></ul></li></ul></div>
 </div>
 
 </div>
