--- a/app/design/frontend/default/default/template/mw_onestepcheckout/daskboard/onepage/shipping_method/available.phtml
+++ b/app/design/frontend/default/default/template/mw_onestepcheckout/daskboard/onepage/shipping_method/available.phtml
@@ -1,29 +1,3 @@
-<?php
-/**
- * Magento
- *
- * NOTICE OF LICENSE
- *
- * This source file is subject to the Academic Free License (AFL 3.0)
- * that is bundled with this package in the file LICENSE_AFL.txt.
- * It is also available through the world-wide-web at this URL:
- * http://opensource.org/licenses/afl-3.0.php
- * If you did not receive a copy of the license and are unable to
- * obtain it through the world-wide-web, please send an email
- * to license@magentocommerce.com so we can send you a copy immediately.
- *
- * DISCLAIMER
- *
- * Do not edit or add to this file if you wish to upgrade Magento to newer
- * versions in the future. If you wish to customize Magento for your
- * needs please refer to http://www.magentocommerce.com for more information.
- *
- * @category    design
- * @package     base_default
- * @copyright   Copyright (c) 2010 Magento Inc. (http://www.magentocommerce.com)
- * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
- */
-?>
 <?php if (!($_shippingRateGroups = $this->getShippingRates())): ?>
     <p><?php echo $this->__('Sorry, no quotes are available for this order at this time.') ?></p>
 <?php else: ?>
@@ -35,20 +9,21 @@
             <?php $_sole = $_sole && count($_rates) == 1; foreach ($_rates as $_rate): ?>
                 <li>
                    <?php if ($_rate->getErrorMessage()): ?>
-                    <ul class="messages"><li class="error-msg"><ul><li><?php echo $_rate->getErrorMessage() ?></li></ul></li></ul>
+                   
                    <?php else: ?>
                         <?php if ($_sole) : ?>
                         <span class="no-display"><input name="shipping_method" type="radio" value="<?php echo $_rate->getCode() ?>" id="s_method_<?php echo $_rate->getCode() ?>" checked="checked" /></span>
                         <?php else: ?>
                         <input name="shipping_method" type="radio" value="<?php echo $_rate->getCode() ?>" id="s_method_<?php echo $_rate->getCode() ?>"<?php if($_rate->getCode()===$this->getAddressShippingMethod()) echo ' checked="checked"' ?> class="radio shipping_method_handle" />
                         <?php endif; ?>
-                        <label for="s_method_<?php echo $_rate->getCode() ?>"><?php echo $_rate->getMethodTitle() ?>
+                        <label for="s_method_<?php echo $_rate->getCode() ?>" id="s_method_<?php echo $_rate->getCode() ?>" value="<?php echo $_rate->getPrice() ?>"><img src="<?php echo $this->getSkinUrl('o2ti_moip/imagem/'); echo $_rate->getCode()?>.gif"  id="o2ti<?php echo $_rate->getCode() ?>.png" alt="<?php echo $_rate->getMethodTitle() ?>"><br /><?php echo $_rate->getMethodTitle() ?>
                         <?php $_excl = $this->getShippingPrice($_rate->getPrice(), $this->helper('tax')->displayShippingPriceIncludingTax()); ?>
                         <?php $_incl = $this->getShippingPrice($_rate->getPrice(), true); ?>
                         <?php echo $_excl; ?>
                         <?php if ($this->helper('tax')->displayShippingBothPrices() && $_incl != $_excl): ?>
                             (<?php echo $this->__('Incl. Tax'); ?> <?php echo $_incl; ?>)
                         <?php endif; ?>
+<input id="o2ti<?php echo $_rate->getCode() ?>" style="display:none;" value="<?php echo $_rate->getPrice(); ?>">
                         </label>
                    <?php endif ?>
                 </li>
@@ -64,9 +39,13 @@
 <script type="text/javascript">
 	var shipping_method_changed=-1; //khac phuc tren IE khi change phai click 2 lan` moi ajax
 	$MW_Onestepcheckout(".shipping_method_handle").click(function(){
+$MW_Onestepcheckout('#updatevalue').html('');
 				if(this.value != shipping_method_changed){
 					updateShippingMethod();
 					shipping_method_changed = this.value;
+					elisei = $MW_Onestepcheckout('#o2ti'+this.value).val();
+					$MW_Onestepcheckout('#updatevalue').html(elisei);				
+		
 				}
 	});
 
