--- a/app/design/frontend/default/default/template/moip/form.phtml
+++ b/app/design/frontend/default/default/template/moip/form.phtml
@@ -117,7 +117,7 @@ $data->getGrandTotal();
  
                       $parcelamento = $api->getParcelamento($data->getGrandTotal());
                   foreach ($parcelamento as $k => $v): ?>
-                      <option value="<?php echo $k ?>"><?php echo $k . "x R$ " . number_format($v['valor'], "2", ",", ".") . " | No total de R$ " . number_format($v['total'], "2", ",", ".");  ?></option>
+                      <option value=" <option value="<?php echo $k ?>"><?php echo $k . "x R$ " . $v['valor']. " | No total de R$ " . $v['total'];  ?></option>
                  <?php endforeach; ?>
             </select>
             <?php endif; ?>
